# DOoC

./: .flake8  .gitignore  README.md  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: test.yml
dooc/: datasets.py  loss.py  models.py  nets.py  pipelines.py  utils.py
dooc/nets/: __init__.py  drugcell.py  heads.py  multiomics.py  mutations.py  prmo.py
tests/: conftest.py  test_datasets.py  test_loss.py  test_models.py  test_nets.py  test_pipelines.py
