[bdist_wheel]
python-tag = py3

[metadata]
name = dooc
version = attr: dooc._version.__version__
author = Michael Ding
author_email = yandy.ding@gmail.com
description = Digtal Organoid On Chips
long_description = file: README.md
long_description_content_type = text/markdown
keywords = molcule, organoid, AI, deep learning, transformer, drug response, mutations
license_files =
    LICENSE
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Development Status :: 2 - Pre-Alpha

[options]
python_requires = >=3.8
install_requires = file: requirements.txt
packages = find:

[options.packages.find]
exclude =
    tests*

[options.package_data]
dooc = data/*.json, data/*.txt
